# athena

./: .gitignore  CMakeLists.txt  Makefile  README.md  chess.h  compile.bat  compile.sh  fen.py  main.cpp  main.py  run_tests.bat  run_tests.sh  tests.cpp  util.h
.cache/clangd/index/: chess.h.2D736D62254C97A9.idx  main.cpp.D6968C420AB80FA6.idx
.github/workflows/: c-cpp.yml
